chore(isct-387): data-grid cell truncate - fixed ellipse

--- a/projects/fusion-ui/components/table/v4/components/table-cell/table-cell.component.scss
+++ b/projects/fusion-ui/components/table/v4/components/table-cell/table-cell.component.scss
@@ -32,6 +32,9 @@
             text-align: center;
             height: 14px;
         }
+        &.truncate{
+            @extend %truncate-flex-child;
+        }
 
     }
 
